<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DashboardActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bfbfbf"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:animateLayoutChanges="true"
                android:background="?attr/colorPrimary"
                android:padding="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="16dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:padding="8dp"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="3dp"
                card_view:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/txtSubscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="1.5dp"
                    android:padding="10dp"
                    android:text="@string/txt_subscription"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="8dp"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="3dp"
                card_view:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/txtProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="1.5dp"
                    android:padding="10dp"
                    android:text="@string/txt_product"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


